--- a/Lab_Website/views/player_info.html
+++ b/Lab_Website/views/player_info.html
@@ -41,7 +41,7 @@
 	<div class="container">
 		<br>
 		<div class="row">
-			<div class="col-4">
+			<div class="col-4 col-sm-3">
 				<!-- 
 					Todo: This section will hold a Bootstrap Card containing
 						   a demo image (temp_image.svg) and a Bootstrap Dropdown menu
@@ -108,7 +108,7 @@
 				    </tr>
 				    <tr>
 				      <td scope="row">Rushing Yards: 378</td>
-				      <td>Avg. Rushing Yards: 12 </td>
+				      <td> Avg. Rushing Yards: 12 </td>
 				    
 				    </tr>
 				    <tr>
