--- a/views/home.html
+++ b/views/home.html
@@ -37,7 +37,7 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1>Home Page (Incomplete)</h1>
+		<h1>Home Page</h1>
 		<!--Add your code for the home page here -->
 		<!-- Home Page Requirements: 
 		Your home page must include the following components:
